Radio table create screen: fix too big margin between fields

--- a/assets/css/radio-table-create.css
+++ b/assets/css/radio-table-create.css
@@ -3,3 +3,8 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+.form-group {
+    /* remove ugly margin between two fields */
+    margin-top: -15px;
+}
